--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Jairo Caro-Accino Viciana</title>
+  <meta content="width=device-width, initial-scale=1" name="viewport" />
+  <title>index</title>
+  
 </head>
-<body>
-  <div id="ROOT" />
-  <script type="text/javascript" src="index.js"></script>
+<body id="body">
+<div id="ROOT" />
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
