--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 <head>
   <meta content="width=device-width, initial-scale=1" name="viewport" />
-  <title>index</title>
+  <title>app</title>
   
 </head>
-<body id="body">
-<div id="ROOT" />
-<script type="text/javascript" src="index.js"></script>
+<body id="body" class="site">
+<div id="ROOT"></div>
+<script type="text/javascript" src="/index.js"></script>
+
 </body>
 </html>
